force-app/main/default/objects/leankor__ValueStreamStatistic__c/leankor__ValueStreamStatistic__c.object-meta.xml
<CustomObject>
    <description>This contains statistical values for ValueStream and related objects.</description>
    <label>ValueStream Statistic</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ValueStreamStatistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>