force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__CardsBudgetedTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__CardsBudgetedTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contain Total Cards Budgeted Time for every board on per day basis.</description>
    <inlineHelpText>This field contain Total Cards Budgeted Time for every board on per day basis.</inlineHelpText>
    <label>Total Cards Budgeted Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>