force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__CompletedCardCount__c.field-meta.xml
<CustomField>
    <fullName>leankor__CompletedCardCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contain Total Completed Cards for every board on per day basis.</description>
    <inlineHelpText>This field contain Total Completed Cards for every board on per day basis.</inlineHelpText>
    <label>Total Completed Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>