force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__CompletedCardsDuration__c.field-meta.xml
<CustomField>
    <fullName>leankor__CompletedCardsDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contain total completed card duration for every board on per day basis.</description>
    <inlineHelpText>This field contain total completed card duration for every board on per day basis.</inlineHelpText>
    <label>Completed Cards Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>