force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__RemainingCardCount__c.field-meta.xml
<CustomField>
    <fullName>leankor__RemainingCardCount__c</fullName>
    <description>This field contain Total Remaining Cards for every board on per day basis.</description>
    <formula>leankor__KanbanCardCount__c - leankor__CompletedCardCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contain Total Remaining Cards for every board on per day basis.</inlineHelpText>
    <label>Total Remaining Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>