force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__TotalCardsPoint__c.field-meta.xml
<CustomField>
    <fullName>leankor__TotalCardsPoint__c</fullName>
    <description>This field contain Total Cards Point for every board on per day basis.</description>
    <inlineHelpText>This field contain Total Cards Point for every board on per day basis.</inlineHelpText>
    <label>Total Cards Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>