force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__TotalEffortRemainingTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__TotalEffortRemainingTime__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contain Total EffortRemaining Time for every board on per day basis.</description>
    <inlineHelpText>This field contain Total EffortRemaining Time for every board on per day basis.</inlineHelpText>
    <label>Total EffortRemaining Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>