force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__TotalPercentComplete__c.field-meta.xml
<CustomField>
    <fullName>leankor__TotalPercentComplete__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field contains Total Percent Completion for every board on per day basis.</description>
    <inlineHelpText>This field contains Total Percent Completion for every board on per day basis.</inlineHelpText>
    <label>Total Percent Complete</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>