force-app/main/default/objects/leankor__ValueStreamStatistic__c/fields/leankor__ValueStream__c.field-meta.xml
<CustomField>
    <fullName>leankor__ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contain Value Stream ID.</description>
    <inlineHelpText>This field contain Value Stream ID.</inlineHelpText>
    <label>Value Stream</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>ValueStreamStatistics</relationshipLabel>
    <relationshipName>ValueStreamStatistic</relationshipName>
    <type>Lookup</type>
</CustomField>